Fixed padding, added links.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                         Outside of programming I like to run, swim and play the piano.
                     </p>
                     <p>Feel free to get in touch if you have any questions or just want to chat!</p>
-                    <a href="mailto:joohoon.kim@outlook.com"><button class="w3-bar-item w3-button">Get In Touch</button> </a>
+                    <a href="mailto:joohoon.kim@outlook.com"><button class="w3-bar-item w3-button">Get In Touch</button></a>
+                    <a href="https://www.linkedin.com/in/joohoon/" target="_blank"><button class="w3-bar-item w3-button">LinkedIn</button></a>
+                    <a href="https://github.com/joohoonkim/" target="_blank"><button class="w3-bar-item w3-button">GitHub</button></a>
                 </div>
                 <div class="image-wrapper">
                     <img src="assets/profile-img.jpg" alt="Profile Image">
