--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="card" id="project-card">
                     <h3>Program Display</h3>
                     <p>
-                        A GUI that allows the user to visualize written programs by displaying it in one application.
+                        A GUI that allows the user to visualize written programs by displaying them on one application.
                         Helps the user learn and understand basic data structure and algorithm concepts.
                         Written in C++ using the wxWidgets library.
                     </p>
@@ -127,7 +127,7 @@
                 <div class="card" id="project-card">
                     <h3>GreenMe</h3>
                     <p>
-                        A mobile application that helps sort disposable waste based on the recycling bylaws based on the user's current city location.
+                        A mobile application that helps sort disposable waste based on the recycling bylaws of the user's current city location.
                         It does this using image recognition; informing the user which recycling category the item falls under. Written in Java using Google Vision API.
                     </p>
                     <div id="project-reference">
