--- a/index.html
+++ b/index.html
@@ -1,147 +1,172 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Joohoon Kim</title>
 
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+<head>
+    <title>Joohoon Kim</title>
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="/css/default.css">
-    </head>
-    <body>
-        <section class="s1" id="intro-section">
-            <div class="intro-container">
-                <div class="title-wrapper">
-                    <p>Hi, my name is</p>
-                    <h1>Joohoon Kim</h1>
-                </div>
-                <div class="card paragraph-wrapper" id="intro-card">
-                    <p>
-                        I have a background in mechatronics, with a particular interest in software engineering.
-                        Shortly after my studies at McMaster University I joined General Motors as a Jr. Software Engineer.
-                        On my free time I work on projects that interest me or expose me to new technologies.
-                        Outside of programming I like to run, swim and play the piano.
-                    </p>
-                    <p>Feel free to get in touch if you have any questions or just want to chat!</p>
-                    <a href="mailto:joohoon.kim@outlook.com"><button class="w3-bar-item w3-button">Get In Touch</button></a>
-                    <a href="https://www.linkedin.com/in/joohoon/" target="_blank"><button class="w3-bar-item w3-button">LinkedIn</button></a>
-                    <a href="https://github.com/joohoonkim/" target="_blank"><button class="w3-bar-item w3-button">GitHub</button></a>
-                </div>
-                <div class="image-wrapper">
-                    <img src="assets/profile-img.jpg" alt="Profile Image">
-                </div>    
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="/css/default.css">
+</head>
+
+<body>
+    <section class="s1" id="intro-section">
+        <div class="intro-container">
+            <div class="title-wrapper">
+                <p>Hi, my name is</p>
+                <h1>Joohoon Kim</h1>
             </div>
-        </section>
-
-        <section class="s1" id="exp-section">
-            <div class="experience-wrapper">
-                <h1>Experience</h1>
-                <div class="card" id="experience-card">
-                    <div class="w3-bar w3-black">
-                        <button class="w3-bar-item w3-button" onclick="openExperience('GM')">General Motors</button>
-                        <button class="w3-bar-item w3-button" onclick="openExperience('Magna')">Magna International</button>
-                        <button class="w3-bar-item w3-button" onclick="openExperience('S2e')">S2E Technologies</button>
-                    </div>
-                    <div id="GM" class="experience-tab">
-                        <h3>General Motors</h3>
-                        <h5>Jr. Software Engineer</h5>
-                        <h6>July 2020 - Present</h6>
-                        <ul class="exp-list">
-                            <li>
-                                Currently working in Active Safety in order to improve testing and simulation of controllers.
-                            </li>
-                            <li>
-                                Developed an internal tool for automating test configurations using Python.
-                            </li>
-                        </ul>
-                        <a href="https://www.gm.com/" target="_blank">Visit General Motors</a>
-                    </div>
-                    <div id="Magna" class="experience-tab" style="display:none">
-                        <h3>Magna International</h3>
-                        <h5>Software Engineer Intern</h5>
-                        <h6>May 2018 - August 2019</h6>
-                        <ul class="exp-list">
-                            <li>
-                                Refactored a real-time application to be compatible with a hard RTOS, allowing the software to be executable on an embedded platform.
-                            </li>
-                            <li>
-                                Optimized execution time of a real-time application by splitting computation onto two separate cores, reducing runtime from 80ms to 30ms.
-                            </li>
-                            <li>
-                                Developed an internal application using C++ and openCV to read and analyze sensor information.
-                            </li>
-                        </ul>
-                        <a href="https://www.magna.com/" target="_blank">Visit Magna International</a>
-                    </div>
-                    <div id="S2e" class="experience-tab" style="display:none">
-                        <h3>S2E Technologies Inc.</h3>
-                        <h5>Robotics Developer Co-op</h5>
-                        <h6>May 2017 - August 2017</h6>
-                        <ul class="exp-list">
-                            <li>
-                            Spearheaded a project to design an autonomous delivery robot used within communities by building a
-                            prototype presented to stakeholders.    
-                            </li>
-                            <li>
-                            Utilized SLAM, obstacle detection, and path finding algorithms using ROS libraries and a LiDAR sensor to
-                            implement autonomous navigation.    
-                            </li>
-                        </ul>
-                        <a href="https://s2etech.com/" target="_blank" class="card-link">Visit S2E Technologies</a>
-                    </div>
-                </div> 
+            <div class="card paragraph-wrapper" id="intro-card">
+                <p>
+                    I have a background in mechatronics, with a particular interest in software engineering.
+                    Shortly after my studies at McMaster University I joined General Motors as a Jr. Software Engineer.
+                    On my free time I work on projects that interest me or expose me to new technologies.
+                    Outside of programming I like to run, swim and play the piano.
+                </p>
+                <p>Feel free to get in touch if you have any questions or just want to chat!</p>
+                <a href="mailto:joohoon.kim@outlook.com"><button class="button">Get In Touch</button></a>
+                <a href="https://www.linkedin.com/in/joohoon/" target="_blank"><button
+                        class="button">LinkedIn</button></a>
+                <a href="https://github.com/joohoonkim/" target="_blank"><button class="button">GitHub</button></a>
             </div>
-        </section>
+            <div class="image-wrapper">
+                <img src="assets/profile-img.jpg" alt="Profile Image">
+            </div>
+        </div>
+    </section>
 
-        <section class="s1" id="proj-section">
-            <div class="project-container">
-                <div class="title-wrapper">
-                    <h1>Projects</h1>
+    <section class="s1" id="exp-section">
+        <div class="experience-wrapper">
+            <h1>Experience</h1>
+            <div class="card" id="experience-card">
+                <div class="experience-tab-wrapper">
+                    <button class="tab" onclick="openExperience('GM')">General Motors</button>
+                    <button class="tab" onclick="openExperience('Magna')">Magna International</button>
+                    <button class="tab" onclick="openExperience('S2e')">S2E Technologies</button>
                 </div>
-                <div class="card" id="project-card">
-                    <h3>CarSimPy</h3>
+                <div id="GM" class="experience-description">
+                    <h3>General Motors</h3>
+                    <h5>Jr. Software Engineer</h5>
+                    <h6>July 2020 - Present</h6>
+                    <ul class="exp-list">
+                        <li>
+                            Currently working in Active Safety in order to improve testing and simulation of
+                            controllers.
+                        </li>
+                        <li>
+                            Developed an internal tool for automating test configurations using Python.
+                        </li>
+                    </ul>
+                    <a href="https://www.gm.com/" target="_blank"><button class="button">Visit General
+                            Motors</button></a>
+                </div>
+                <div id="Magna" class="experience-description" style="display:none">
+                    <h3>Magna International</h3>
+                    <h5>Software Engineer Intern</h5>
+                    <h6>May 2018 - August 2019</h6>
+                    <ul class="exp-list">
+                        <li>
+                            Refactored a real-time application to be compatible with a hard RTOS, allowing the software
+                            to be executable on an embedded platform.
+                        </li>
+                        <li>
+                            Optimized execution time of a real-time application by splitting computation onto two
+                            separate cores, reducing runtime from 80ms to 30ms.
+                        </li>
+                        <li>
+                            Developed an internal application using C++ and openCV to read and analyze sensor
+                            information.
+                        </li>
+                    </ul>
+                    <a href="https://www.magna.com/" target="_blank"><button class="button">Visit Magna
+                            International</button></a>
+                </div>
+                <div id="S2e" class="experience-description" style="display:none">
+                    <h3>S2E Technologies Inc.</h3>
+                    <h5>Robotics Developer Co-op</h5>
+                    <h6>May 2017 - August 2017</h6>
+                    <ul class="exp-list">
+                        <li>
+                            Spearheaded a project to design an autonomous delivery robot used within communities by
+                            building a
+                            prototype presented to stakeholders.
+                        </li>
+                        <li>
+                            Utilized SLAM, obstacle detection, and path finding algorithms using ROS libraries and a
+                            LiDAR sensor to
+                            implement autonomous navigation.
+                        </li>
+                    </ul>
+                    <a href="https://s2etech.com/" target="_blank" class="card-link"><button class="button">Visit S2E
+                            Technologies</button></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="s1" id="proj-section">
+        <div class="project-container">
+            <div class="title-wrapper">
+                <h1>Projects</h1>
+            </div>
+            <div class="card" id="project-card">
+                <h3>CarSimPy</h3>
+                <div class="project-p-wrapper">
                     <p>
                         2D driving simulator that captures the physics of a vehicle being driven.
                         Includes obstacles and terrain that interacts with the vehicle.
                         Written in Python using the PyGame library.
                     </p>
-                    <div id="project-reference">
-                        <a href="https://github.com/joohoonkim/CarSimPy" target="_blank">Visit Project</a>    
-                    </div>
-                    
                 </div>
-                <div class="card" id="project-card">
-                    <h3>Program Display</h3>
+                <div id="project-reference">
+                    <a href="https://github.com/joohoonkim/CarSimPy" target="_blank"><button class="button">Visit
+                            Project</button></a>
+                </div>
+
+            </div>
+            <div class="card" id="project-card">
+                <h3>Program Display</h3>
+                <div class="project-p-wrapper">
                     <p>
                         A GUI that allows the user to visualize written programs by displaying them on one application.
                         Helps the user learn and understand basic data structure and algorithm concepts.
                         Written in C++ using the wxWidgets library.
                     </p>
-                    <div id="project-reference">
-                        <a href="https://github.com/joohoonkim/ProgramDisplay" target="_blank">Visit Project</a>   
-                    </div>
-                    
                 </div>
-                <div class="card" id="project-card">
-                    <h3>GreenMe</h3>
+                <div id="project-reference">
+                    <a href="https://github.com/joohoonkim/ProgramDisplay" target="_blank"><button class="button">Visit
+                            Project</button></a>
+                </div>
+
+            </div>
+            <div class="card" id="project-card">
+                <h3>GreenMe</h3>
+                <div class="project-p-wrapper">
                     <p>
-                        A mobile application that helps sort disposable waste based on the recycling bylaws of the user's current city location.
-                        It does this using image recognition; informing the user which recycling category the item falls under. Written in Java using Google Vision API.
+                        A mobile application that helps sort disposable waste based on the recycling bylaws of the
+                        user's
+                        current city location.
+                        It does this using image recognition; informing the user which recycling category the item falls
+                        under. Written in Java using Google Vision API.
                     </p>
-                    <div id="project-reference">
-                        <a href="https://github.com/joeyjyyang/GreenMe" target="_blank">Visit Project</a>                      
-                    </div>
+                </div>
+                <div id="project-reference">
+                    <a href="https://github.com/joeyjyyang/GreenMe" target="_blank"><button class="button">Visit
+                            Project</button></a>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <footer class="footer-wrapper">
-            <p>Copyright &copy; 2020 Joohoon Kim</p>
-        </footer>
-    </body>
+    <footer class="footer-wrapper">
+        <p>Copyright &copy; 2020 Joohoon Kim</p>
+    </footer>
+</body>
 
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/default.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/default.js"></script>
+
 </html>
