--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h1>Projects</h1>
             </div>
             <div class="card" id="project-card">
-                <h3>CarSimPy</h3>
+                <h3>Drive Simulation</h3>
                 <div class="project-p-wrapper">
                     <p>
                         2D driving simulator that captures the physics of a vehicle being driven.
