--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div id="GM" class="experience-description">
                     <h3>General Motors</h3>
-                    <h5>Jr. Software Engineer</h5>
+                    <h5>Software Engineer</h5>
                     <h6>July 2020 - Present</h6>
                     <ul class="exp-list">
                         <li>
