--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card paragraph-wrapper" id="intro-card">
                 <p>
                     I have a background in mechatronics, with a particular interest in software engineering.
-                    Shortly after my studies at McMaster University I joined General Motors as a Jr. Software Engineer.
+                    Shortly after my studies at McMaster University I joined General Motors as a Software Engineer.
                     On my free time I work on projects that interest me or expose me to new technologies.
                     Outside of programming I like to run, swim and play the piano.
                 </p>
