--- a/index.html
+++ b/index.html
@@ -17,20 +17,19 @@
         <div class="intro-container">
             <div class="title-wrapper">
                 <p>Hi, my name is</p>
-                <h1>Joohoon Kim</h1>
+                <h1>David</h1>
             </div>
             <div class="card paragraph-wrapper" id="intro-card">
                 <p>
-                    I have a background in mechatronics, with a particular interest in software engineering.
-                    Shortly after my studies at McMaster University I joined General Motors as a Software Engineer.
-                    On my free time I work on projects that interest me or expose me to new technologies.
-                    Outside of programming I like to run, swim and play the piano.
+                    I'm a full-stack software developer and Mechatronics Engineer. Currently based in 
+                    Toronto, ON. I love to code and work on interesting software development projects 
+                    in my free time. I have a diverse set of experiences and technical skillsets that range 
+                    from robotics, low-level software to full-stack web and app development.
                 </p>
-                <p>Feel free to get in touch if you have any questions or just want to chat!</p>
-                <a href="mailto:joohoon.kim@outlook.com"><button class="button">Get In Touch</button></a>
-                <a href="https://www.linkedin.com/in/joohoon/" target="_blank"><button
+                <a href="mailto:davidkim2552@gmail.com"><button class="button">Get In Touch</button></a>
+                <a href="https://www.linkedin.com/in/kim5/" target="_blank"><button
                         class="button">LinkedIn</button></a>
-                <a href="https://github.com/joohoonkim/" target="_blank"><button class="button">GitHub</button></a>
+                <a href="https://github.com/kim2552/" target="_blank"><button class="button">GitHub</button></a>
             </div>
             <div class="image-wrapper">
                 <img src="assets/profile-img.jpg" alt="Profile Image">
@@ -59,6 +58,9 @@
                         <li>
                             Developed an internal tool for automating test configurations using Python.
                         </li>
+                        <li>
+                            Developed high fidelity simulation models for hardware-in-the-loop vehicle testing.
+                        </li>
                     </ul>
                     <a href="https://www.gm.com/" target="_blank"><button class="button">Visit General
                             Motors</button></a>
@@ -85,19 +87,17 @@
                             International</button></a>
                 </div>
                 <div id="S2e" class="experience-description" style="display:none">
-                    <h3>S2E Technologies Inc.</h3>
+                    <h3>S2E Technologies</h3>
                     <h5>Robotics Developer Co-op</h5>
                     <h6>May 2017 - August 2017</h6>
                     <ul class="exp-list">
                         <li>
                             Spearheaded a project to design an autonomous delivery robot used within communities by
-                            building a
-                            prototype presented to stakeholders.
+                            building a prototype presented to stakeholders.
                         </li>
                         <li>
                             Utilized SLAM, obstacle detection, and path finding algorithms using ROS libraries and a
-                            LiDAR sensor to
-                            implement autonomous navigation.
+                            LiDAR sensor to implement autonomous navigation.
                         </li>
                     </ul>
                     <a href="https://s2etech.com/" target="_blank" class="card-link"><button class="button">Visit S2E
@@ -122,39 +122,38 @@
                     </p>
                 </div>
                 <div id="project-reference">
-                    <a href="https://github.com/joohoonkim/CarSimPy" target="_blank"><button class="button">Visit
+                    <a href="https://github.com/kim2552/drive-simulation" target="_blank"><button class="button">Visit
                             Project</button></a>
                 </div>
 
             </div>
             <div class="card" id="project-card">
-                <h3>Program Display</h3>
+                <h3>Memories App</h3>
                 <div class="project-p-wrapper">
                     <p>
-                        A GUI that allows the user to visualize written programs by displaying them on one application.
-                        Helps the user learn and understand basic data structure and algorithm concepts.
-                        Written in C++ using the wxWidgets library.
+                        Memories App is a CRUD web application that allows the user to store/display images and descriptions 
+                        of events they want to remember. It is created using Laravel, MySQL, HTML, CSS and Javascript. This 
+                        project was created to be used as a personal blog website.
                     </p>
                 </div>
                 <div id="project-reference">
-                    <a href="https://github.com/joohoonkim/ProgramDisplay" target="_blank"><button class="button">Visit
+                    <a href="https://github.com/kim2552/memories-app" target="_blank"><button class="button">Visit
                             Project</button></a>
                 </div>
 
             </div>
             <div class="card" id="project-card">
-                <h3>GreenMe</h3>
+                <h3>New Player</h3>
                 <div class="project-p-wrapper">
                     <p>
-                        A mobile application that helps sort disposable waste based on the recycling bylaws of the
-                        user's
-                        current city location.
-                        It does this using image recognition; informing the user which recycling category the item falls
-                        under. Written in Java using Google Vision API.
+                        New Player is a video manipulation program that can swap the face of a person in a video with the face 
+                        of a different person in an image selected by the user. The project is written in C++ using wxWidgets 
+                        for the GUI. It uses OpenCV and dlib for image processing. This project was created as an exercise to 
+                        learn about wxWidgets, OpenCV and the dlib library.
                     </p>
                 </div>
                 <div id="project-reference">
-                    <a href="https://github.com/joeyjyyang/GreenMe" target="_blank"><button class="button">Visit
+                    <a href="https://github.com/kim2552/new-player" target="_blank"><button class="button">Visit
                             Project</button></a>
                 </div>
             </div>
@@ -162,7 +161,7 @@
     </section>
 
     <footer class="footer-wrapper">
-        <p>Copyright &copy; 2020 Joohoon Kim</p>
+        <p>2020 David Kim</p>
     </footer>
 </body>
 
