--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Joohoon Kim</title>
+    <title>David Kim</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
